Fixed mix up of styles on auth form. Added a tiny margin.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -458,12 +458,12 @@ main {
     font-weight: 700;
     font-size: 90%;
     padding: 30px 0 5px 0;
-
   }
   input {
     text-align: center;
     padding: 0 10px;
     font-family: 'BioRhyme';
+    margin-bottom: 10px;
   }
   textarea {
     font-family: 'BioRhyme';
