--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -196,7 +196,53 @@ nav {
     }
   }
 }
+////////////////// info window on map styling
 
+.popupWindow {
+  font-family: 'BioRhyme';
+  border-radius: 50%;
+  background: red;
+}
+
+/*style the box*/
+ .gm-style .gm-style-iw {
+    background-color: $earth !important;
+    // border-radius: 50%;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    min-height: 120px !important;
+    padding-top: 10px;
+    display: block !important;
+    text-align: center;
+    padding: 10px;
+ }
+
+ /*style the p tag*/
+ .gm-style .gm-style-iw #google-popup p{
+    padding: 10px;
+ }
+
+
+/*style the arrow*/
+.gm-style div div div div div div div div {
+    background-color: $earth !important;
+    padding: 0;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    color: #fff;
+    font-size: 16px;
+}
+
+/*style the link*/
+.gm-style div div div div div div div div a {
+    color: #f1f1f1;
+    font-weight: bold;
+}
+
+///////////////////////////////////////////////
 
 h1 {
   margin-top: 0px;
